Clen code - Lower css score of verticalPadding for app override - Use less variable instead of static number - Restore app css to prevent overlap on both side scroller. Enact-DCO-1.0-Signed-off-by: Jeonghee Ahn <jeonghee27.ahn@lge.com>

--- a/useScroll/useScroll.module.less
+++ b/useScroll/useScroll.module.less
@@ -4,6 +4,10 @@
 @import "../styles/variables.less";
 @import "../styles/mixins.less";
 
+.verticalPadding {
+	.padding-start-end(0, @sand-scrollbar-focusable-size - @sand-scrollbar-size);
+}
+
 .scroll {
 	--scroll-scrollbar-size: @sand-scrollbar-size;
 
@@ -12,10 +16,6 @@
 
 	&.focusableScrollbar {
 		--scroll-scrollbar-size: @sand-scrollbar-focusable-size;
-
-		&.hasVerticalScrollbar {
-			.padding-start-end(0, 24px);
-		}
 	}
 
 	.verticalScrollbar {
